# T7_Computer_Architecture_Lab2

./: CMakeLists.txt  README.md  main.cpp  makefile  report.txt  testD0.txt  testD3.txt  testE0.txt  testE3.txt
Decoder/: Decoder.cpp  Decoder.h  Decoder.hpp
Tests/: Tests.cpp  tests.cpp
